mypowerapp/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: mypowerapp
    app.openshift.io/runtime: backend
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        deploymentconfig: backend
    spec:
      containers:
      - image: quay.io/daniel_casali/powerbackend:latest
        imagePullPolicy: Always
        name: backend
        resources:
          requests:
            cpu: 0.1
        ports:
        - containerPort: 3306
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mariadb-1
        persistentVolumeClaim:
          claimName: database
