mypowerapp/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/route-disabled: "false"
    deployment.kubernetes.io/revision: "1"
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: mypowerapp
    app.openshift.io/runtime: frontend
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        deploymentconfig: frontend
    spec:
      containers:
      - image: quay.io/daniel_casali/powerfrontend:latest
        imagePullPolicy: Always
        name: wordpress
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
