mypowerapp/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: mypowerapp
    app.openshift.io/runtime-version: latest
  name: backend
spec:
  ports:
  - name: 3306-tcp
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: backend
    deploymentconfig: backend
  type: ClusterIP
