mypowerapp/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: mypowerapp
    app.openshift.io/runtime-version: latest
  name: frontend
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
    deploymentconfig: frontend
  sessionAffinity: None
  type: ClusterIP
